--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="etNombre">Nombre</string>
     <string name="btAdd">Add</string>
     <string name="contentDescription_fabAdd">Add icon</string>
+    <string name="etIdImagen">Id Imagen</string>
+    <string name="etNombreImagen">Nombre Imagen</string>
+    <string name="btSelectImagen">Select Imagen</string>
+    <string name="etDescripcionImagen">Descripcion Imagen</string>
 </resources>
