--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,11 +22,33 @@
     <string name="tvAmenazas">Amenazas</string>
     <string name="tvMedidasPropuestas">Medidas propuestas</string>
     <string name="etNombre">Nombre</string>
-    <string name="btAdd">Add</string>
+    <string name="btAñadir">Añadir</string>
     <string name="contentDescription_fabAdd">Add icon</string>
     <string name="contentDescription_fabImagen">Upload icon</string>
     <string name="etIdImagen">Id Imagen</string>
     <string name="etNombreImagen">Nombre Imagen</string>
     <string name="btSelectImagen">Select Imagen</string>
     <string name="etDescripcionImagen">Descripcion Imagen</string>
+    <string name="tvAddFloraTitle">Add a new flora</string>
+    <string name="hintFloraNombre">Nombre</string>
+    <string name="hintFloraFamilia">Familia</string>
+    <string name="hintFloraIdentificacion">Identificación</string>
+    <string name="hintFloraAltitud">Altitud</string>
+    <string name="hintFloraFitosociologia">Fitosociología</string>
+    <string name="hintFloraBiotipo">Biotipo</string>
+    <string name="hintFloraBiologiaReproductiva">Biología reproductiva</string>
+    <string name="hintFloraFloración">Floración</string>
+    <string name="hintFloraHabitat">Hábitat</string>
+    <string name="hintFloraFructificacion">Fructificación</string>
+    <string name="hintFloraExpresionSexual">Expresión sexual</string>
+    <string name="hintFloraPolinizacion">Polinización</string>
+    <string name="hintFloraDispersion">Dispersión</string>
+    <string name="hintFloraNumCromosomatico">Número cromosomático</string>
+    <string name="hintFloraReproduccionAsexual">Reproducción asexual</string>
+    <string name="hintFloraDistribucion">Distribución</string>
+    <string name="hintFloraBiologia">Biología</string>
+    <string name="hintFloraDemografia">Demografía</string>
+    <string name="hintFloraAmenazas">Amenazas</string>
+    <string name="hintFloraMedidasPropuestas">Medidas propuestas</string>
+    <string name="btCancelarAñadir">Cancelar</string>
 </resources>
