--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,34 @@
 <resources>
     <string name="app_name">Flora</string>
     <string name="contentDescription_ivFlora">ivFlora</string>
-    <string name="tvNombre">Nombre</string>
-    <string name="tvFamilia">Familia</string>
-    <string name="tvIdentificacion">Identificacion</string>
-    <string name="tvAltitud">Altitud</string>
-    <string name="tvHabitat">Habitat</string>
-    <string name="tvFitosociologia">Fitosociologia</string>
-    <string name="tvBiotipo">Biotipo</string>
-    <string name="tvBiologiaReproductiva">Biologia reproductiva</string>
-    <string name="tvFloracion">Floracion</string>
-    <string name="tvFructificacion">Fructificacion</string>
-    <string name="tvExpresionSexual">Expresion sexual</string>
-    <string name="tvPolinazcion">Polinizacion</string>
-    <string name="tvDispersion">Dispersion</string>
-    <string name="tvNumeroCromosomatico">Numero cromosomatico</string>
-    <string name="tvReproduccionAsexual">Reproduccion asexual</string>
-    <string name="tvDistribucion">Distribucion</string>
-    <string name="tvBiologia">Biologia</string>
-    <string name="tvDemografia">Demografia</string>
-    <string name="tvAmenazas">Amenazas</string>
-    <string name="tvMedidasPropuestas">Medidas propuestas</string>
+    <string name="floraNombre">Nombre</string>
+    <string name="floraFamilia">Familia</string>
+    <string name="floraIdentificacion">Identificación</string>
+    <string name="floraAltitud">Altitud</string>
+    <string name="floraHabitat">Hábitat</string>
+    <string name="floraFitosociologia">Fitosociología</string>
+    <string name="floraBiotipo">Biotipo</string>
+    <string name="floraBiologiaReproductiva">Biología reproductiva</string>
+    <string name="floraFloracion">Floración</string>
+    <string name="floraFructificacion">Fructificación</string>
+    <string name="floraExpresionSexual">Expresión sexual</string>
+    <string name="floraPolinazcion">Polinización</string>
+    <string name="floraDispersion">Dispersión</string>
+    <string name="floraNumCromosomatico">Número cromosomático</string>
+    <string name="floraReproduccionAsexual">Reproducción asexual</string>
+    <string name="floraDistribucion">Distribución</string>
+    <string name="floraBiologia">Biología</string>
+    <string name="floraDemografia">Demografía</string>
+    <string name="floraAmenazas">Amenazas</string>
+    <string name="floraMedidasPropuestas">Medidas propuestas</string>
     <string name="etNombre">Nombre</string>
     <string name="btAñadir">Añadir</string>
     <string name="contentDescription_fabAdd">Add icon</string>
     <string name="contentDescription_fabImagen">Upload icon</string>
-    <string name="etIdImagen">Id Imagen</string>
-    <string name="etNombreImagen">Nombre Imagen</string>
-    <string name="btSelectImagen">Select Imagen</string>
-    <string name="etDescripcionImagen">Descripcion Imagen</string>
-    <string name="tvAddFloraTitle">Add a new flora</string>
+    <string name="hintIdImagen">Id Imagen</string>
+    <string name="hintNombreImagen">Nombre</string>
+    <string name="hintDescripcionImagen">Descripción</string>
+    <string name="tvAddFloraTitle"><u>Añadir una nueva flora</u></string>
     <string name="hintFloraNombre">Nombre</string>
     <string name="hintFloraFamilia">Familia</string>
     <string name="hintFloraIdentificacion">Identificación</string>
@@ -37,7 +36,7 @@
     <string name="hintFloraFitosociologia">Fitosociología</string>
     <string name="hintFloraBiotipo">Biotipo</string>
     <string name="hintFloraBiologiaReproductiva">Biología reproductiva</string>
-    <string name="hintFloraFloración">Floración</string>
+    <string name="hintFloraFloracion">Floración</string>
     <string name="hintFloraHabitat">Hábitat</string>
     <string name="hintFloraFructificacion">Fructificación</string>
     <string name="hintFloraExpresionSexual">Expresión sexual</string>
@@ -50,5 +49,11 @@
     <string name="hintFloraDemografia">Demografía</string>
     <string name="hintFloraAmenazas">Amenazas</string>
     <string name="hintFloraMedidasPropuestas">Medidas propuestas</string>
-    <string name="btCancelarAñadir">Cancelar</string>
+    <string name="btCancelar">Cancelar</string>
+    <string name="tvEditFloraTitle">Datos:</string>
+    <string name="btBorrar">Borrar</string>
+    <string name="btEditar">Editar</string>
+    <string name="btGuardar">Guardar</string>
+    <string name="contentDescription_ivSelectImagen">ivSelectImagen</string>
+    <string name="tvUploadImagenTitle"><u>Subir imagen</u></string>
 </resources>
