--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,6 @@
     <string name="toast_añadirImagen">Imagen añadida</string>
     <string name="toast_nameExist">Ya existe una flora con este nombre</string>
     <string name="toast_fieldsEmptyAddImage">El campo nombre y la ID no pueden estar vacíos</string>
+    <string name="alertDialogCancelarAñadirImagen_title">¿Desea no añadir esta imagen?</string>
+    <string name="alertDialogAñadirImagen_message">Será sustituida por la imagen actual</string>
 </resources>
