--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="alertDialog_editImagen">Editar imagen</string>
     <string name="tvEmpty">Tu jardín está vacío</string>
     <string name="contentDescription_ivEmpty">ivEmpty</string>
+    <string name="itemMenuAccount">Cuenta</string>
 </resources>
